--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,10 @@
 html,
-body {
+body,
+#app,
+#renderCanvas {
   margin: 0 !important;
   padding: 0 !important;
   overflow: hidden;
+  width: 100%;
+  height: 100%;
 }
